--- a/samples/src/main/res/layout/list_item.xml
+++ b/samples/src/main/res/layout/list_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_frame"
     android:layout_width="match_parent"
@@ -14,15 +13,15 @@
         android:id="@+id/item_holder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingRight="@dimen/activity_margin">
+        android:paddingEnd="@dimen/activity_margin">
 
         <TextView
             android:id="@+id/item_name"
             android:layout_width="match_parent"
-            android:textColor="#ffffff"
             android:layout_height="wrap_content"
             android:padding="@dimen/activity_margin"
-            tools:text="An item"/>
+            android:textColor="#ffffff"
+            tools:text="An item" />
 
     </RelativeLayout>
 </FrameLayout>
