--- a/commons/src/main/res/layout/dialog_textview.xml
+++ b/commons/src/main/res/layout/dialog_textview.xml
@@ -5,6 +5,6 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:paddingLeft="@dimen/activity_margin"
-    android:paddingRight="@dimen/activity_margin"
     android:paddingTop="@dimen/activity_margin"
-    android:textSize="@dimen/normal_text_size"/>
+    android:paddingRight="@dimen/activity_margin"
+    android:textSize="@dimen/bigger_text_size"/>
