--- a/commons/src/main/res/values/donottranslate.xml
+++ b/commons/src/main/res/values/donottranslate.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="package_name">com.simplemobiletools.commons</string>
     <string name="simple_commons">Simple Commons</string>
     <string name="progress">%1$s / %2$s</string>
     <string name="donate_url">https://simplemobiletools.com/donate</string>
