--- a/commons/src/main/res/layout/tab_rename_pattern.xml
+++ b/commons/src/main/res/layout/tab_rename_pattern.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<com.simplemobiletools.commons.views.RenamePatternTab
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rename_items_holder"
@@ -27,4 +27,4 @@
         android:text="@string/rename_date_time_pattern"
         android:textSize="@dimen/normal_text_size"/>
 
-</RelativeLayout>
+</com.simplemobiletools.commons.views.RenamePatternTab>
