--- a/commons/src/main/res/layout/tab_rename_simple.xml
+++ b/commons/src/main/res/layout/tab_rename_simple.xml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<com.simplemobiletools.commons.views.RenameSimpleTab
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/rename_items_holder"
+    android:id="@+id/rename_simple_holder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/activity_margin">
 
     <com.simplemobiletools.commons.views.MyEditText
-        android:id="@+id/rename_items_value"
+        android:id="@+id/rename_simple_value"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_margin"
+        android:hint="@string/string_to_add"
         android:singleLine="true"
         android:textCursorDrawable="@null"
         android:textSize="@dimen/normal_text_size"/>
 
     <RadioGroup
-        android:id="@+id/rename_items_radio_group"
+        android:id="@+id/rename_simple_radio_group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/rename_items_value">
+        android:layout_below="@+id/rename_simple_value">
 
         <com.simplemobiletools.commons.views.MyCompatRadioButton
-            android:id="@+id/rename_items_radio_append"
+            android:id="@+id/rename_simple_radio_append"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:checked="true"
@@ -31,11 +32,11 @@
             android:text="@string/append_filenames"/>
 
         <com.simplemobiletools.commons.views.MyCompatRadioButton
-            android:id="@+id/rename_items_radio_prepend"
+            android:id="@+id/rename_simple_radio_prepend"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/normal_margin"
             android:paddingBottom="@dimen/normal_margin"
             android:text="@string/prepend_filenames"/>
     </RadioGroup>
-</RelativeLayout>
+</com.simplemobiletools.commons.views.RenameSimpleTab>
