--- a/commons/src/main/res/layout/dialog_rename_items.xml
+++ b/commons/src/main/res/layout/dialog_rename_items.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_margin"
+        android:hint="@string/string_to_add"
         android:singleLine="true"
         android:textCursorDrawable="@null"
         android:textSize="@dimen/normal_text_size"/>
