--- a/commons/src/main/res/drawable/ic_minus_vector.xml
+++ b/commons/src/main/res/drawable/ic_minus_vector.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="24">
   <path
       android:fillColor="#FFFFFFFF"
-      android:pathData="m8.2712,10.8983 l0,2 8,0 0,-2z"/>
+      android:pathData="m2.8135,10.2521 l0,3.6755c19.4347,0.0062 1.147,0 18.3774,0l0,-3.6755c-20.4968,-0.0239 -1.7489,0 -18.3774,0z"/>
 </vector>
