--- a/commons/src/main/res/drawable/ic_plus_vector.xml
+++ b/commons/src/main/res/drawable/ic_plus_vector.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="24">
   <path
       android:fillColor="#FFFFFFFF"
-      android:pathData="m13.8399,2.9012 l-3.6755,0 0,7.351 -7.351,0 0,3.6755 7.351,0 0,7.351 3.6755,0 0,-7.351 7.351,0 0,-3.6755 -7.351,0z"/>
+      android:pathData="m13.3248,3.8 l-2.3935,-0.0127 0,7.1005 -7.0751,-0.0127 0,2.3935 7.0751,0 0,7.0751 2.3935,0 0,-7.0751 7.0751,0 0,-2.3935 -7.0751,0z"/>
 </vector>
