--- a/commons/src/main/res/drawable/ic_cross_vector.xml
+++ b/commons/src/main/res/drawable/ic_cross_vector.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="24">
   <path
       android:fillColor="#FFFFFFFF"
-      android:pathData="m12.4492,7.339 l-1.5,0 0,6 4.75,2.85 0.75,-1.23 -4,-2.37zM11.9492,3.339c-4.97,0 -9,4.03 -9,9 0,4.97 4.02,9 9,9 4.97,0 9,-4.03 9,-9 0,-4.97 -4.03,-9 -9,-9zM11.9492,19.339c-3.87,0 -7,-3.13 -7,-7 0,-3.87 3.13,-7 7,-7 3.87,0 7,3.13 7,7 0,3.87 -3.13,7 -7,7z"/>
+      android:pathData="M19,6.41L17.59,5 12,10.59 6.41,5 5,6.41 10.59,12 5,17.59 6.41,19 12,13.41 17.59,19 19,17.59 13.41,12z"/>
 </vector>
