--- a/commons/src/main/res/layout/dialog_export_settings.xml
+++ b/commons/src/main/res/layout/dialog_export_settings.xml
@@ -25,9 +25,9 @@
             android:id="@+id/export_settings_path"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/medium_margin"
+            android:paddingStart="@dimen/medium_margin"
             android:paddingTop="@dimen/small_margin"
-            android:paddingRight="@dimen/small_margin"
+            android:paddingEnd="@dimen/small_margin"
             android:paddingBottom="@dimen/activity_margin"/>
 
         <com.simplemobiletools.commons.views.MyTextView
@@ -41,7 +41,7 @@
             android:id="@+id/export_settings_filename"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/small_margin"
+            android:layout_marginStart="@dimen/small_margin"
             android:layout_marginBottom="@dimen/activity_margin"
             android:singleLine="true"
             android:textCursorDrawable="@null"
