--- a/commons/src/main/res/drawable/ic_next_vector.xml
+++ b/commons/src/main/res/drawable/ic_next_vector.xml
@@ -1,9 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
+    android:width="18dp"
+    android:height="18dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path
-      android:fillColor="#FFFFFFFF"
-      android:pathData="M6,18l8.5,-6L6,6v12zM16,6v12h2V6h-2z"/>
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="m3.6515,18.1271 l8.5,-6 -8.5,-6z" />
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="m12.2592,18.2788 l8.5,-6 -8.5,-6z" />
 </vector>
