--- a/commons/src/main/res/drawable/ic_previous_vector.xml
+++ b/commons/src/main/res/drawable/ic_previous_vector.xml
@@ -1,9 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
+    android:width="18dp"
+    android:height="18dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path
-      android:fillColor="#FFFFFFFF"
-      android:pathData="M6,6h2v12L6,18zM9.5,12l8.5,6L18,6z"/>
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="m20.7592,18.1271 l-8.5,-6 8.5,-6z" />
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M12.1515,18.2788 L3.6515,12.2788 12.1515,6.2788Z" />
 </vector>
