updated ChangeDateTimeFormatDialog (for Simple-Calendar) * added new date format dd. MMMM yyyy (common in Germany) * added parameter to hide 24h clock checkmark (for date format only)

--- a/commons/src/main/res/layout/dialog_change_date_time_format.xml
+++ b/commons/src/main/res/layout/dialog_change_date_time_format.xml
@@ -84,6 +84,14 @@
             android:paddingBottom="@dimen/normal_margin"
             tools:text="MMMM d yyyy" />
 
+        <com.simplemobiletools.commons.views.MyCompatRadioButton
+            android:id="@+id/change_date_time_dialog_radio_nine"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/normal_margin"
+            android:paddingBottom="@dimen/normal_margin"
+            tools:text="dd. MMMM yyyy" />
+
     </RadioGroup>
 
     <com.simplemobiletools.commons.views.MyAppCompatCheckbox
