--- a/commons/src/main/res/values/donottranslate.xml
+++ b/commons/src/main/res/values/donottranslate.xml
@@ -71,6 +71,12 @@
     <string name="sms_mms_text">Copyright (C) 2017 Jacob Klinker\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.You may obtain a copy of the License at\n\nhttps://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.See the License for the specific language governing permissions and limitations under the License.</string>
     <string name="sms_mms_url">https://github.com/klinker41/android-smsmms</string>
 
+    <!-- Message digest algorithms -->
+    <string name="md5">MD5</string>
+    <string name="sha1">SHA-1</string>
+    <string name="sha256">SHA-256</string>
+    <string name="sha512">SHA-512</string>
+
     <string-array name="months">
         <item>@string/january</item>
         <item>@string/february</item>
