--- a/commons/src/main/res/layout/dialog_filepicker.xml
+++ b/commons/src/main/res/layout/dialog_filepicker.xml
@@ -10,35 +10,67 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.simplemobiletools.commons.views.Breadcrumbs
-            android:id="@+id/filepicker_breadcrumbs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/activity_margin"
-            android:paddingTop="@dimen/activity_margin"
-            android:paddingRight="@dimen/activity_margin"
-            android:paddingBottom="@dimen/medium_margin" />
-
-        <com.simplemobiletools.commons.views.MyRecyclerView
-            android:id="@+id/filepicker_list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/filepicker_breadcrumbs"
-            android:scrollbars="none"
-            app:layoutManager="com.simplemobiletools.commons.views.MyLinearLayoutManager" />
-
-        <com.simplemobiletools.commons.views.FastScroller
-            android:id="@+id/filepicker_fastscroller"
+        <RelativeLayout
+            android:id="@+id/filepicker_files_holder"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignTop="@+id/filepicker_list"
-            android:layout_alignBottom="@+id/filepicker_list"
-            android:layout_alignParentEnd="true"
-            android:paddingStart="@dimen/normal_margin">
+            android:layout_height="wrap_content">
 
-            <include layout="@layout/fastscroller_handle_vertical" />
+            <com.simplemobiletools.commons.views.Breadcrumbs
+                android:id="@+id/filepicker_breadcrumbs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/activity_margin"
+                android:paddingTop="@dimen/activity_margin"
+                android:paddingRight="@dimen/activity_margin"
+                android:paddingBottom="@dimen/medium_margin" />
 
-        </com.simplemobiletools.commons.views.FastScroller>
+            <com.simplemobiletools.commons.views.MyRecyclerView
+                android:id="@+id/filepicker_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/filepicker_breadcrumbs"
+                android:scrollbars="none"
+                app:layoutManager="com.simplemobiletools.commons.views.MyLinearLayoutManager" />
+
+            <com.simplemobiletools.commons.views.FastScroller
+                android:id="@+id/filepicker_fastscroller"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignTop="@+id/filepicker_list"
+                android:layout_alignBottom="@+id/filepicker_list"
+                android:layout_alignParentEnd="true"
+                android:paddingStart="@dimen/normal_margin">
+
+                <include layout="@layout/fastscroller_handle_vertical" />
+
+            </com.simplemobiletools.commons.views.FastScroller>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/filepicker_favorites_holder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone">
+
+            <com.simplemobiletools.commons.views.MyTextView
+                android:id="@+id/filepicker_favorites_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/medium_margin"
+                android:padding="@dimen/activity_margin"
+                android:text="@string/favorites"
+                android:textSize="@dimen/bigger_text_size" />
+
+            <com.simplemobiletools.commons.views.MyRecyclerView
+                android:id="@+id/filepicker_favorites_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/filepicker_favorites_label"
+                android:layout_marginStart="@dimen/activity_margin"
+                android:scrollbars="none"
+                app:layoutManager="com.simplemobiletools.commons.views.MyLinearLayoutManager" />
+
+        </RelativeLayout>
     </RelativeLayout>
 
     <LinearLayout
