--- a/commons/src/main/res/values/styles.xml
+++ b/commons/src/main/res/values/styles.xml
@@ -13,6 +13,8 @@
         <item name="android:textColor">@color/default_text_color</item>
     </style>
 
+    <style name="TranslucentTheme" parent="Theme.AppCompat.NoActionBar" />
+
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowBackground">@android:color/black</item>
     </style>
