--- a/commons/src/main/res/layout/dialog_rename_item.xml
+++ b/commons/src/main/res/layout/dialog_rename_item.xml
@@ -6,23 +6,24 @@
     android:orientation="vertical"
     android:padding="@dimen/activity_margin">
 
-    <com.simplemobiletools.commons.views.MyTextView
-        android:id="@+id/rename_item_path"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/tiny_margin" />
-
-    <com.simplemobiletools.commons.views.MyEditText
-        android:id="@+id/rename_item_name"
+    <com.simplemobiletools.commons.views.MyTextInputLayout
+        android:id="@+id/rename_item_title_hint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/activity_margin"
-        android:singleLine="true"
-        android:textCursorDrawable="@null"
-        android:textSize="@dimen/normal_text_size" />
+        android:hint="@string/title">
+
+        <com.simplemobiletools.commons.views.MyEditText
+            android:id="@+id/rename_item_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/activity_margin"
+            android:singleLine="true"
+            android:textCursorDrawable="@null"
+            android:textSize="@dimen/normal_text_size" />
+    </com.simplemobiletools.commons.views.MyTextInputLayout>
 
     <com.simplemobiletools.commons.views.MyTextInputLayout
-        android:id="@+id/rename_item_hint"
+        android:id="@+id/rename_item_extension_hint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/extension">
